# PlotLib

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.simple  Dockerfile.working  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  all_plot_types_test  all_plot_types_test.cpp  build.sh  centralized_demo  centralized_demo.cpp  cluster_demo  cluster_example.cpp  comprehensive_subplot_test.cpp  comprehensive_test  docker-compose.yml  enhanced_scatter_plot  example  example_usage.cpp  legend_test  legend_test.cpp  main.cpp  mixed_subplot_test  mixed_subplot_test.cpp  scaling_test  scatter_plot  simple_test  simple_test.cpp  subplot_demo  subplot_example.cpp  test_comparison.cpp  (+2 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml
cmake/: PlotLibConfig.cmake.in
docs/: DOCKER.md  Doxyfile  QUICK_START.md
docs/api/: README.md
docs/gallery/: README.md
docs/tutorial/: advanced.md  beginner.md
examples/: CMakeLists.txt  README.md  centralized_demo.cpp  line_plot_demo.cpp
examples/advanced/: 01_custom_styling_and_advanced_features.cpp  02_complex_dashboards_and_layouts.cpp  03_performance_optimization_and_large_datasets.cpp  04_reference_lines_and_annotations.cpp
examples/beginner/: 01_first_scatter_plot.cpp  02_colors_and_multiple_series.cpp  03_first_line_plot.cpp  04_first_histogram.cpp  05_simple_subplots.cpp  06_discrete_histograms.cpp  07_empty_plots.cpp
examples/plot_types/: 01_line_plot.cpp  02_scatter_plot.cpp  03_histogram_plot.cpp  04_comprehensive_plot.cpp
include/: histogram_plot.h  line_plot.h  plot_manager.h  scatter_plot.h
include/plotlib/: histogram_plot.h  line_plot.h  plot_manager.h  scatter_plot.h
memory-bank/: active-context.md  progress.md
output/: .gitkeep
plotting_library/: scatter_plot.cpp  scatter_plot.h
src/: histogram_plot.cpp  line_plot.cpp  plot_manager.cpp  scatter_plot.cpp
tests/: CMakeLists.txt  basic_tests.cpp
